--- a/f2pmini/Assembly-CSharp.csproj
+++ b/f2pmini/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Ball.cs" />
     <Compile Include="Assets\Scripts\BlockDestroyer.cs" />
     <Compile Include="Assets\Scripts\Deadzone.cs" />
     <Compile Include="Assets\Scripts\DropShadow.cs" />
