--- a/f2pmini/Assembly-CSharp.csproj
+++ b/f2pmini/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\Deadzone.cs" />
     <Compile Include="Assets\Scripts\DropShadow.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Goal.cs" />
     <Compile Include="Assets\Scripts\MapProperties.cs" />
     <Compile Include="Assets\Scripts\MapTester.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
